Removed a bunch pf unused experiments and debugging info.

--- a/maze/MazeTest.html
+++ b/maze/MazeTest.html
@@ -17,7 +17,7 @@
 </body>
 </html>
 <script>
-    var	NCELLS = 30;
+    var	NCELLS = 64;
 
     var startTime = performance.now();
 
@@ -27,13 +27,15 @@
 
     var elapsed = (performance.now() - startTime)/1000.0;
 
-    //maze.dumpEdges( NCELLS, NCELLS );
+
     console.log("Maze complete! elapsed: " +  elapsed.toFixed(3) + " seconds. maxNeighbors: " +
             maze.maxNeighbors.toFixed(0));
 
     drawMaze( maze );
 
-    maze.dumpEdges(NCELLS, NCELLS);
+    console.log("Maze drawn");
+
+    //maze.dumpEdges(NCELLS, NCELLS);
 
     startTime = performance.now();
 
@@ -65,9 +67,9 @@
      * Callback function that gets the path of the rat
      */
     function mazeEvent( label, rat,  i,  j, nexi, nexj, pathlen, bsac ) {
-        console.log(label + " i,j: " + i.toFixed(0) + " " + j.toFixed(0)
-                     + " nexi,j: " + nexi.toFixed(0) + " " + nexj.toFixed(0)
-                     + " pathlen: " + pathlen.toFixed(0) + " bsac: " + bsac );
+        //console.log(label + " i,j: " + i.toFixed(0) + " " + j.toFixed(0)
+        //             + " nexi,j: " + nexi.toFixed(0) + " " + nexj.toFixed(0)
+        //             + " pathlen: " + pathlen.toFixed(0) + " bsac: " + bsac );
 
         if (rat.bSingleHit === false)
             drawPath( rat.maze, i, j, nexi, nexj);
@@ -78,7 +80,7 @@
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext("2d");
         ctx.strokeStyle = 'black';
-        ctx.lineWidth = 4;
+        ctx.lineWidth = 1;
 
         var x = 20;
         var y = 800;
@@ -142,7 +144,7 @@
         var px2 = 20 + x2 * cellSize + cellSize / 2;
         var py2 = 800 - y2 * cellSize - cellSize / 2;
 
-        ctx.lineWidth = 6;
+        ctx.lineWidth = 1;
         ctx.strokeStyle = 'blue';
 
         ctx.beginPath();
