More cleanup and removing redundant or unnecessary code.

--- a/maze/MazeTest.html
+++ b/maze/MazeTest.html
@@ -39,7 +39,7 @@
 
     startTime = performance.now();
 
-    var rat = new MAZE.MazeRat(maze, 0x80, false, mazeEvent);
+    var rat = new MAZE.MazeRat( maze );
 
     bPath = true;
     rat.initSolveObj(0x80, false, mazeEvent);
