--- a/maze/MazeTest.html
+++ b/maze/MazeTest.html
@@ -17,7 +17,7 @@
 </body>
 </html>
 <script>
-    var	NCELLS = 64;
+    var	NCELLS = 8;
 
     var startTime = performance.now();
 
@@ -51,6 +51,8 @@
     console.log("Maze solved? " + bSuccess + "  elapsed: " +  elapsed.toFixed(3) + " seconds. maxNeighbors: " +
             maze.maxNeighbors.toFixed(0));
 
+    bSuccess = rat.retraceSteps();
+
     bPath = false;
     startTime = performance.now();
 
@@ -67,9 +69,9 @@
      * Callback function that gets the path of the rat
      */
     function mazeEvent( label, rat,  i,  j, nexi, nexj, pathlen, bsac ) {
-        //console.log(label + " i,j: " + i.toFixed(0) + " " + j.toFixed(0)
-        //             + " nexi,j: " + nexi.toFixed(0) + " " + nexj.toFixed(0)
-        //             + " pathlen: " + pathlen.toFixed(0) + " bsac: " + bsac );
+        console.log(label + " i,j: " + i.toFixed(0) + " " + j.toFixed(0)
+                     + " nexi,j: " + nexi.toFixed(0) + " " + nexj.toFixed(0)
+                     + " pathlen: " + pathlen.toFixed(0) + " bsac: " + bsac );
 
         if (rat.bSingleHit === false)
             drawPath( rat.maze, i, j, nexi, nexj);
