Minor tweaks to the code.  Added the codebeat ignore file.

--- a/basin/Basin3d.html
+++ b/basin/Basin3d.html
@@ -17,14 +17,13 @@
 		<script src="../three-js/stats.js" type="text/javascript"></script>
         <script src="../gfx/gfx-scene.js" type="text/javascript"></script>
 	</head>
-	<body>
+	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
         var NCELLS = 64;
         var plane;
         var terrain = [];
         var planeMesh;
 
-        // allocate the Scene object, request orbitControls, some of 3D axes 10 units high and the stats
         var gfxScene = new GFX.Scene( {
             cameraPos : [10, 20, 40],
             axesHeight:10,
@@ -53,14 +52,13 @@
                 terrain[i] = [];
 
                 for ( j = 0; j < NCELLS*2+1; j++ ) {
-                    terrain[i][j] = new THREE.Vector3(j, Math.random()*2, i);
+                    terrain[i][j] = new THREE.Vector3(j, Math.random()*4, i);
                 }
             }
 
             plane = new THREE.Geometry();
 
             for ( i = 0; i < NCELLS*2; i += 2 ) {
-
                 for ( j = 0; j < NCELLS*2; j += 2 ) {
 
                     createQuadPatch( i, j);
@@ -71,12 +69,16 @@
             plane.computeFaceNormals();
             plane.computeVertexNormals();
 
-            plane.computeBoundingSphere();
+           // plane.computeBoundingSphere();
 
-            var wireMaterial = new THREE.MeshBasicMaterial( { color: 0xccccff, wireframe: true, transparent: true, opacity:0.1 } );
-            var colorMaterial = new THREE.MeshPhongMaterial( { color: 0x000080, side:THREE.DoubleSide } );
+            //r: 89, g: 133, b: 39,
+            var wireMaterial = new THREE.MeshBasicMaterial( { color: 0xccccff, 
+            			wireframe: true, transparent: true, opacity:0.05 } );
+            var colorMaterial = new THREE.MeshPhongMaterial( { color: 0x598527,
+            			side:THREE.DoubleSide } );
 
-            planeMesh = THREE.SceneUtils.createMultiMaterialObject( plane, [ colorMaterial, wireMaterial ] );
+            planeMesh = THREE.SceneUtils.createMultiMaterialObject( plane, 
+            		[ colorMaterial, wireMaterial ] );
 
             // and add it to the scene
             gfxScene.add(planeMesh);
@@ -130,7 +132,6 @@
          */
         function animateScene() {
 
-            // Tell the browser to call this function when page is visible
             requestAnimationFrame(animateScene);
 
             gfxScene.renderScene();
