--- a/basin/Basin3d.html
+++ b/basin/Basin3d.html
@@ -16,10 +16,13 @@
 		<script src="../three-js/OrbitControls-Touch-Ortho.js" type="text/javascript"></script>
 		<script src="../three-js/stats.js" type="text/javascript"></script>
         <script src="../gfx/gfx-scene.js" type="text/javascript"></script>
+        <script src="../maze/Maze.js"></script>
+        <script src="../maze/MazeRat.js"></script>
+        <script src="Basin.js"></script>
 	</head>
 	<body style="margin:0;padding:0;border:0">
     <script type="text/javascript">
-        var NCELLS = 64;
+        var NCELLS = 4;
         var plane;
         var terrain = [];
         var planeMesh;
@@ -40,11 +43,20 @@
          * Initialize the Demo.
          */
         function initializeDemo() {
+            var basin;
+            var startTime = performance.now();
 
-            createPlane();
+            basin = new BASIN.Basin(NCELLS);
+
+            basin.construct();
+
+            var elapsed = (performance.now() - startTime)/1000.0;
+            console.log("Basin complete! elapsed: " +  elapsed.toFixed(3)  );
+
+            createPlane( basin );
         }
 
-        function createPlane() {
+        function createPlane( basin ) {
 
             var i,j;
             // first, create the two-dimensional array of Vector3 that will be vertices
@@ -52,7 +64,12 @@
                 terrain[i] = [];
 
                 for ( j = 0; j < NCELLS*2+1; j++ ) {
-                    terrain[i][j] = new THREE.Vector3(j, Math.random()*4, i);
+                    //terrain[i][j] = new THREE.Vector3(j, Math.random()*4, i);
+                    if ( (Math.abs(i % 2) === 1) && (Math.abs(j % 2) === 1)) {
+                        if (basin.cells[i][j] === undefined)
+                            debugger;
+                        terrain[i][j] = basin.cells[i][j].chanElev;
+                    }
                 }
             }
 
